# fix

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
applications/: CMakeLists.txt
applications/asyncify/: CMakeLists.txt  asyncify_storage.wat  example.cc
applications/bptree-get/: CMakeLists.txt  bptree-get-n.c  bptree-get-string-key-bad.c  bptree-get-string-key.c  bptree-get.c  support.h  support.wat
applications/count-words/: CMakeLists.txt  count_words.c  count_words.cc  merge_counts.c  merge_counts.cc  support.h  support.wat
applications/curry/: CMakeLists.txt  curry.cc
applications/flatware/: .gitignore  CMakeLists.txt  asm-flatware.c  asm-flatware.h  asm-flatware.wat  c-flatware.c  filesys.c  filesys.h  flatware-decs.h  generate.py
applications/map/: CMakeLists.txt  add_2.cc  map.cc
applications/mapreduce/: CMakeLists.txt  mapreduce.cc
applications/scheduler/: CMakeLists.txt  basic.c
applications/testing/: asyncify-test  map-test
applications/util/: .gitignore  CMakeLists.txt  cmake_helper_functions.cmake  fixpoint_debug.h  fixpoint_storage.h  fixpoint_storage.wat  fixpoint_util.c  fixpoint_util.h  generate.py  wasi_snapshot_preview1.wat
docs/: .gitignore  CMakeLists.txt  api.md  bootstrap.md  design.md  fix.hs  fixcache.md  flatware.md  linking.md
flatware/: CMakeLists.txt  api.h  asm-flatware.h  asm-flatware.wat  c-flatware.c  c-flatware.h  filesys.c  filesys.h
flatware/examples/: CMakeLists.txt
flatware/testing/: add-test  hello-world-test  return-test
pl/: CMakeLists.txt  add_2.cc  map.cc  map_memory.wat  test.cc  vector.wat  wasi_snapshot_preview1.wat
pl/testing/: map-test
pl/util/: CMakeLists.txt  cmake_helper_functions.cmake  fixpoint_storage.c  fixpoint_storage.wat  fixpoint_util.cc  generate.py
src/: CMakeLists.txt  hello.wasm  memory_helper.wat  proc_exit.c  trivial-demo.c
src/compiler/: CMakeLists.txt  ccompiler.cc  ccompiler.hh  elfloader.cc  elfloader.hh  include-path.hh.in  initcomposer.cc  initcomposer.hh  mycodegenact.cc  mycodegenact.hh  wasm-rt-content.h  wasm_rt_content.py  wasmcompiler.cc  wasmcompiler.hh  wasminspector.cc  wasminspector.hh
src/component/: CMakeLists.txt  blob.cc  blob.hh  blobfactory.hh  cookie.hh  encode.cc  encode.hh  encoded_blob.hh  encoded_blob.hpp  handle.cc  handle.hh  invocation.cc  invocation.hh  key.hh  name.cc  name.hh  object.cc  object.hh  program.cc  program.hh  thunk.cc  thunk.hh  tree.hh
src/coupon/: CMakeLists.txt  couponcollector.cc  couponcollector.hh  handle_util.hh  hash_table.cc  hash_table.hh  main.cc  object.cc  object.hh  runner.hh  runtime.cc  runtime.hh  runtimestorage.cc  runtimestorage.hh  scheduler.cc  scheduler.hh  tagger.cc  tagger.hh
src/examples/: CMakeLists.txt  return3
src/flatware/: memory_helper.wat
src/handle/: CMakeLists.txt  blob.hh  generate.c  handle_extra.hh  handle_post.hh  handle_pre.hh  operators.hh  tree.hh  treeref.hh  types.hh
src/http/: CMakeLists.txt  http_client.hh  http_reader.hh  http_server.hh  http_structures.hh  http_writer.cc  http_writer.hh  web_server.cc  web_server.hh
src/leanout/: Checker.lean  Main.lean  fix.c  fix.lean  lake-manifest.json  lakefile.toml
src/runtime/: CMakeLists.txt  api.hh  applyer.cc  applyer.hh  ccompiler.cc  ccompiler.hh  dependency_graph.cc  dependency_graph.hh  elf.cc  elf.hh  elfloader.cc  elfloader.hh  entry.hh  evaluator.cc  evaluator.hh  executor.cc  executor.hh  fixpointapi.cc  fixpointapi.hh  initcomposer.cc  initcomposer.hh  instance.hh  interface.hh  job.hh  message.cc  message.hh  mutablevalue.hh  network.cc  network.hh  no-apply-executor.cc  no-apply-executor.hh  objectreference.hh  operation.hh  pass.cc  pass.hh  relater.cc  relater.hh  relation.hh  runner.hh  runtime.cc  (+21 more)
src/scripts/: CMakeLists.txt  bootstrap.cc
src/storage/: CMakeLists.txt  blobdecoder.cc  blobdecoder.hh  concurrent_flat_hash_map.hh  concurrent_queue.hh  concurrent_storage.hh  concurrent_vector.hh  fixcache.hh  handle_util.hh  hash_map.hh  hash_table.hh  interface.hh  repository.cc  repository.hh  runtimestorage.cc  runtimestorage.hh  storage.hh  storage_exception.hh
src/tester/: CMakeLists.txt  add.cc  add.hh  add_tester.cc  add_tester_timing.cc  add_timing.cc  base64_test.cc  benchmark_timing.cc  benchmark_timing_perf.cc  c_to_elf_tester.cc  compiler-tester.cc  compiler_tester.cc  compiler_timing.cc  data-server.cc  dependency-tester.cc  deserialization_test.cc  distributed-tester.cc  distributed-worker.cc  elf_linking_tester.cc  execute_encode_from_elf.cc  fib_tester.cc  fix.cc  fixpoint-client-bptree-n.cc  fixpoint-client-bptree.cc  fixpoint-client-compile.cc  fixpoint-client-dec.cc  fixpoint-client-oneoff.cc  fixpoint-client-self-host.cc  fixpoint-client-wikipedia.cc  fixpoint-client.cc  fixpoint-mapreduce-server.cc  fixpoint-server.cc  hash_map_test.cc  http-tester.cc  llvm_vfs_tester.cc  main.cc  multi-stream-demo.cc  network-tester.cc  option-parser.cc  rw-tester.cc  (+12 more)
src/tests/: CMakeLists.txt  add.cc  add.hh  bptree-helper.hh  bptree.cc  bptree.hh  create-bptree-string-keys.cc  create-bptree.cc  fixpoint-test-main.cc  hash-table-perf.cc  lwvirt-timing.cc  main.cc  readonlyrt.hh  run-python.cc  test-add-flatware.cc  test-add.cc  test-api.py  test-blake3.cc  test-bptree-get.cc  test-bptree.cc  test-countwords.cc  test-curry.cc  test-dependency-graph.cc  test-distributed.cc  test-evaluator.cc  test-executor.cc  test-fib.cc  test-filesys-flatware.cc  test-handle.cc  test-hash-table.cc  test-helloworld-flatware.cc  test-local-scheduler.cc  test-map.cc  test-mapreduce.cc  test-open-flatware.cc  test-pass-scheduler.cc  test-python-flatware.cc  test-relater.cc  test-resource-limits.cc  test-resource-limits.sh  (+8 more)
src/util/: .gitmodules  CMakeLists.txt  address.cc  address.hh  base16.hh  base64.hh  blake3.cc  blake3.hh  channel.hh  eventloop.cc  eventloop.hh  exception.hh  file_descriptor.cc  file_descriptor.hh  hello.s  mmap.cc  mmap.hh  mutex.hh  option-parser.hh  overload.hh  parser.hh  picosha2.h  resource_limits.cc  resource_limits.hh  ring_buffer.cc  ring_buffer.hh  sha256.cc  sha256.hh  (+10 more)
(+204 files in other folders)
