cmake_minimum_required(VERSION 3.12)
project(docs)
find_package(Doxygen)
if (${DOXYGEN_FOUND})
    set(DOXYGEN_DOCS_TARGET_NAME "doxygen-docs")    

    set(DOXYGEN_PROJECT_NAME "Fix")
    set(DOXYGEN_EXCLUDE_PATTERNS "*/_deps/*")
    set(DOXYGEN_CREATE_SUBDIRS "YES")
    set(DOXYGEN_BUILTIN_STL_SUPPORT "YES")
    set(DOXYGEN_EXTRACT_ALL "YES")
    set(DOXYGEN_EXTRACT_PRIVATE "YES")
    set(DOXYGEN_EXTRACT_PRIV_VIRTUAL "YES")
    set(DOXYGEN_EXTRACT_PACKAGE "YES")
    set(DOXYGEN_EXTRACT_STATIC "YES")
    set(DOXYGEN_EXTRACT_LOCAL_CLASSES "YES")
    set(DOXYGEN_EXTRACT_ANON_NSPACES "YES")
    set(DOXYGEN_SOURCE_BROWSER "YES")
    set(DOXYGEN_STRIP_CODE_COMMENTS "NO")
    set(DOXYGEN_REFERENCED_BY_RELATION "YES")
    set(DOXYGEN_REFERENCES_RELATION "YES")
    set(DOXYGEN_HTML_DYNAMIC_SECTIONS "YES")
    set(DOXYGEN_HTML_COLORSTYLE "TOGGLE")
    #set(DOXYGEN_DISABLE_INDEX "YES")
    set(DOXYGEN_GENERATE_TREEVIEW "YES")
    #set(DOXYGEN_FULL_SIDEBAR "YES")
    set(DOXYGEN_TEMPLATE_RELATIONS "YES")
    set(DOXYGEN_CALL_GRAPH "YES")
    set(DOXYGEN_CALLER_GRAPH "YES")
    set(DOXYGEN_DOT_IMAGE_FORMAT "svg")

    doxygen_add_docs(${DOXYGEN_DOCS_TARGET_NAME} ../)
    
    message("Doxygen target \"${DOXYGEN_DOCS_TARGET_NAME}\" added")
endif()